(fix & feat) mise en cache par htaccess, letter spacing pour bouttons, width et height img, logique de balisage

--- a/style.css
+++ b/style.css
@@ -35,12 +35,6 @@
     .image-acceuil {
         width: 100;
     }
-    .keywords {
-        margin-top: 30px;
-        margin-bottom: 30px;
-        font-size: 20px;
-        color: #FFFFFF;
-    }
     a {
         font-weight: 400;
         font-family: Arial, Helvetica, sans-serif;
@@ -245,7 +239,7 @@ a:hover {
 .l-bloc h5 a,
 .l-bloc h6 a,
 .l-bloc p a {
-    color: rgba(0, 0, 0, .6);
+    color: black;
 }
 
 .d-bloc .panel .a-btn:hover,
@@ -263,7 +257,7 @@ a:hover {
 .l-bloc h5 a:hover,
 .l-bloc h6 a:hover,
 .l-bloc p a:hover {
-    color: rgba(0, 0, 0, 1);
+    color: black;
 }
 
 .l-bloc .navbar-toggle .icon-bar {
@@ -388,7 +382,7 @@ a:hover {
     }
     .nav > li .dropdown-menu a,
     .nav > li .dropdown-menu a:hover {
-        color: #484848;
+        color: black;
     }
     .nav-invert .site-navigation {
         left: 0;
@@ -495,12 +489,15 @@ button {
 .icon-rs {
     font-size: 50px!important;
     color: #FFF;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
     padding-top: 20px;
 }
 
 .icon-rs:hover {
-    color: rgba(255, 255, 255, 1);
+    color: rgb(0, 0, 0);
+}
+.fa:hover {
+    opacity: 0.8;
 }
 
 .icon-lg {
@@ -735,6 +732,7 @@ p {
 .social {
     max-width: 400px;
     margin: auto auto auto auto;
+    padding-bottom: 20px;
 }
 
 h2 {
@@ -817,6 +815,7 @@ h4 {
 .btn-atomic-tangerine {
     background: #C14F1C;
     color: #FFF!important;
+    letter-spacing: 0.5px;
 }
 
 .btn-atomic-tangerine:hover {
